<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chapter_10.NorthernLightsAnimation.NorthernLightsAnimation">

    <ImageView
        android:id="@+id/imgLights"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/ch10_imgDescription"/>

    <Button
        android:id="@+id/ch10_btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgLights"
        android:layout_marginTop="10dp"
        android:text="@string/ch10_btnStart"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/ch10_btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/ch10_btnStop"
        android:textSize="25sp"
        android:layout_below="@+id/ch10_btnStart"
        android:layout_marginTop="10dp"/>

</RelativeLayout>