<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".Chapter_4.MedicalCalculator">

    <TextView
        android:id="@+id/ch4_medical_textView_Convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="450dp"
        android:text="@string/ch4_medical_textView_Convert"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp" />

    <RadioGroup
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/editText_HiddenInput"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="152dp">

        <RadioButton
            android:id="@+id/ch4_medical_rb_Lbtokg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:keyboardNavigationCluster="false"
            android:text="@string/ch4_medical_rb_Lbtokg"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/ch4_medical_rb_Kgtolb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:keyboardNavigationCluster="false"
            android:text="@string/ch4_medical_rb_Kgtolb"
            android:textIsSelectable="false"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/ch4_medical_btn_Convert"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="181dp"
        android:text="@string/ch4_medical_btn_Convert" />

    <TextView
        android:id="@+id/ch4_medical_textView_Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="115dp"
        android:gravity="center_horizontal"
        android:text="...."
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/ch4_medical_editText_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ch4_medical_btn_Convert"
        android:layout_alignParentTop="true"
        android:layout_marginTop="81dp"
        android:ems="10"
        android:hint="@string/ch4_medical_editText_Input"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp" />

</android.widget.RelativeLayout>