<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chapter_2.Youth_Hostel_App">

    <TextView
        android:id="@+id/ch2_hostel_titleID"
        android:layout_width="314dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/ch2_hostel_titleID"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/ch2_hostel_address"
        android:layout_width="327dp"
        android:layout_height="147dp"
        android:gravity="center"
        android:text="@string/ch2_hostel_address"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="178dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ch2_hostel_cost"
        android:layout_width="327dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/ch2_hostel_cost"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

</android.support.constraint.ConstraintLayout>